game-jogo-da-velha-drag-and-drop

--- a/custom-video-player/index.html
+++ b/custom-video-player/index.html
@@ -43,7 +43,7 @@
                 </li>
             </ul>         
         </div>
-        <video src="demo-video.mp4"></video>
+        <video src="demo-video.mp4" controls></video>
     </div>
 </body>
 </html>
