Update LAB-FRONT V20230314

--- a/lab-school/challenge1403203/index.html
+++ b/lab-school/challenge1403203/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div class="container">
-        Hello
+        <div class="header">
+            
+        </div>
+        <div class="body">
+
+        </div>
     </div>
 </body>
 </html>
