--- a/lab-school/challenge1403203/index.html
+++ b/lab-school/challenge1403203/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">
-            
+        <div class="col">
+
         </div>
-        <div class="body">
+        <div class="col">
+
+        </div>
+        <div class="col">
 
         </div>
     </div>
