Update LAB-FRONT V20230314

--- a/lab-school/challenge1403203/index.html
+++ b/lab-school/challenge1403203/index.html
@@ -10,7 +10,14 @@
 <body>
     <div class="container">
         <div class="col">
-
+            <div class="cadastro-professor">
+                <a class="professor" href="">Segunda</a>
+                <a class="professor" href="">Terça</a>
+                <a class="professor" href="">Quarta</a>
+                <a class="professor" href="">Quinta</a>
+                <a class="professor" href="">Sexta</a>
+                <a class="professor" href="">Sábado</a>
+            </div>
         </div>
         <div class="col">
 
