Update LAB-FRONT V20230314

--- a/lab-school/challenge1403203/index.html
+++ b/lab-school/challenge1403203/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="col">
             <div class="cadastro-professor">
-                <a class="professor" href="">Segunda</a>
+                <a id="segunda" href="">Segunda</a>
                 <a class="professor" href="">Terça</a>
                 <a class="professor" href="">Quarta</a>
                 <a class="professor" href="">Quinta</a>
