Update LAB-FRONT V20230314

--- a/lab-school/challenge1403203/index.html
+++ b/lab-school/challenge1403203/index.html
@@ -10,13 +10,11 @@
 <body>
     <div class="container">
         <div class="col">
-            <div class="cadastro-professor">
+            <div class="data">
                 <a id="segunda" href="">Segunda</a>
-                <a class="professor" href="">Terça</a>
-                <a class="professor" href="">Quarta</a>
-                <a class="professor" href="">Quinta</a>
-                <a class="professor" href="">Sexta</a>
-                <a class="professor" href="">Sábado</a>
+                <a id="terca" href="">Terça</a>
+                <a id="quarta" href="">Quarta</a>
+                <a id="quinta" href="">Quinta</a>
             </div>
         </div>
         <div class="col">
