Update LAB-FRONT V20230314

--- a/lab-school/challenge1403203/index.html
+++ b/lab-school/challenge1403203/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <h1>Professor</h1>
         <div class="col">
             <div class="data">
                 <a id="segunda" href="">Segunda</a>
